update metadata config page

--- a/MediaBrowser.WebDashboard/dashboard-ui/metadataadvanced.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/metadataadvanced.html
@@ -143,7 +143,7 @@
                         </div>
                     </div>
 
-                    <div data-role="collapsible">
+                    <div data-role="collapsible" style="display:none;">
                         <h2>${HeaderVideos}</h2>
                         <div>
                             <div>
