update ios link

--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardfinish.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardfinish.html
@@ -22,7 +22,7 @@
                     <a href="https://play.google.com/store/apps/details?id=com.mb.android&hl=en" target="_blank">
                         <img src="css/images/clients/playstore.png" title="Android via Google Play Store" />
                     </a>
-                    <a href="https://itunes.apple.com/us/app/media-browser-for-ios/id705058087" target="_blank">
+                    <a href="https://itunes.apple.com/us/app/emby/id992180193?ls=1&mt=8" target="_blank">
                         <img src="css/images/clients/ios.png" title="iOS" />
                     </a>
                     <a href="https://www.roku.com/channels#!details/44191/emby" target="_blank">
