fix yellow bars in chrome forms

--- a/MediaBrowser.WebDashboard/dashboard-ui/connectlogin.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/connectlogin.html
@@ -10,6 +10,10 @@
 
             <form class="connectLoginForm" style="margin: 0 auto;display:none;">
 
+                <div style="display: none;">
+                    <input type="text" id="PreventChromeAutocomplete" name="PreventChromeAutocomplete" autocomplete="address-level4" />
+                </div>
+
                 <h1 style="text-align: left;">${HeaderSignInWithConnect}</h1>
                 <div>
                     <paper-input type="text" id="txtManualName" required="required" label="${LabelUser}" autocomplete="off"></paper-input>
@@ -43,6 +47,10 @@
 
             <form class="manualServerForm" style="margin: 0 auto;display:none;">
 
+                <div style="display: none;">
+                    <input type="text" id="PreventChromeAutocomplete" name="PreventChromeAutocomplete" autocomplete="address-level4" />
+                </div>
+
                 <h1 style="text-align: left;">${HeaderConnectToServer}</h1>
                 <div>
                     <paper-input type="text" id="txtServerHost" required="required" label="${LabelServerHost}"></paper-input>
@@ -61,6 +69,10 @@
             </form>
 
             <form class="signupForm" style="margin: 0 auto;display:none;">
+
+                <div style="display: none;">
+                    <input type="text" id="PreventChromeAutocomplete" name="PreventChromeAutocomplete" autocomplete="address-level4" />
+                </div>
 
                 <h1 style="text-align: left;">${HeaderSignUp}</h1>
                 <br />
