--- a/MediaBrowser.WebDashboard/dashboard-ui/login.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/login.html
@@ -12,6 +12,10 @@
 
                 <h1 style="text-align: left;">${HeaderPleaseSignIn}</h1>
 
+                <div style="display: none;">
+                    <input type="text" id="PreventChromeAutocomplete" name="PreventChromeAutocomplete" autocomplete="address-level4" />
+                </div>
+
                 <paper-input type="text" id="txtManualName" required="required" label="${LabelUser}" autocomplete="off"></paper-input>
 
                 <paper-input id="txtManualPassword" type="password" label="${LabelPassword}" autocomplete="off"></paper-input>
