update playlist query

--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceslanguages.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceslanguages.html
@@ -106,8 +106,8 @@
                             </div>
                         </div>
 
-                        <br />
-                        <div>
+                        <div class="fldExternalPlayer" style="display: none;">
+                            <br />
                             <paper-checkbox class="chkExternalVideoPlayer">${OptionEnableExternalVideoPlayers}</paper-checkbox>
                             <div class="fieldDescription paperCheckboxFieldDescription">
                                 <div style="display:none;" class="labelGenericExternalPlayers">${LabelExternalPlayersHelp}</div>
