--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceslanguages.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceslanguages.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="detailSection cinemaModeOptions" style="display:none;">
                     <h1>
-                        ${HeaderCinemaMode}<span style="color:#52B54B;margin-left:.5em;">*</span>
+                        ${HeaderCinemaMode}
                     </h1>
                     <div class="detailSectionContent">
                         <br />
