--- a/MediaBrowser.WebDashboard/dashboard-ui/encodingsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/encodingsettings.html
@@ -20,12 +20,12 @@
 
                     <ul data-role="listview" class="ulForm">
                         <li>
-                            <label for="selectVideoDecoder">${LabelHardwareVideoDecoder}</label>
+                            <label for="selectVideoDecoder">${LabelHardwareAccelerationType}</label>
                             <select id="selectVideoDecoder" data-mini="true">
                                 <option value="">${OptionAuto}</option>
                                 <option value="qsv">Intel Quick Sync</option>
                             </select>
-                            <div class="fieldDescription">${LabelHardwareVideoDecoderHelp}</div>
+                            <div class="fieldDescription">${LabelHardwareAccelerationTypeHelp}</div>
                         </li>
                         <li>
                             <label for="selectThreadCount">${LabelTranscodingThreadCount}</label>
@@ -61,7 +61,7 @@
                             <input type="number" id="txtDownMixAudioBoost" pattern="[0-9]*" required="required" min=".5" max="3" step=".1" />
                             <div class="fieldDescription">${LabelDownMixAudioScaleHelp}</div>
                         </li>
-                        <li>
+                        <li style="display:none;">
                             <input type="checkbox" id="chkEnableDebugEncodingLogging" name="chkEnableDebugEncodingLogging" data-mini="true" />
                             <label for="chkEnableDebugEncodingLogging">${OptionEnableDebugTranscodingLogging}</label>
                             <div class="fieldDescription">${OptionEnableDebugTranscodingLoggingHelp}</div>
