get headroom from bower

--- a/MediaBrowser.WebDashboard/dashboard-ui/login.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/login.html
@@ -4,7 +4,7 @@
     <title>${TitleSignIn}</title>
 </head>
 <body>
-    <div id="loginPage" data-role="page" class="page standalonePage" data-theme="b" data-require="scripts/loginpage,paperbuttonstyle">
+    <div id="loginPage" data-role="page" class="page standalonePage" data-theme="b" data-require="scripts/loginpage,humanedate">
 
         <div data-role="content">
 
